@@ -1,3 +1,4 @@
+{namespace krexx=Tx_Includekrexx_ViewHelpers}
 <f:layout name="BackendSave"/>
 <f:section name="main">
     <f:form id="editconfig" action="save" >
@@ -153,5 +154,8 @@
                 <td><f:form.checkbox id="factory.registerAutomatically" name="factory" checked="{data.factory.registerAutomatically}" value="1" /><label for="factory.registerAutomatically"><f:translate key="factory.settings" /></label></td>
             </tr>
         </table>
+
+        <krexx:debug value="" >sdghsdhfgh</krexx:debug>
+
     </f:form>
 </f:section>
