@@ -422,7 +422,7 @@ class Render
             switch ($model->getData()) {
                 case "destination":
                     // At php shutdown, logfile or direct after analysis.
-                    $valueList = array('shutdown', 'file', 'direct');
+                    $valueList = array('shutdown', 'file');
                     break;
 
                 case "skin":
