@@ -4,13 +4,15 @@
 - Added a metatag to both skins to prevent crawler from indexing
   a kreXX output. Remember kids: never debug a productive site.
   This will only lead to trouble.
+- Bugfix: Removed a warning in the IP-Whitelisting, in case there
+  is no actual IP available.
 - Added the new output type 'direct'.
 - Change: Moved code generation to it's own namespace.
-- Change: Splitted the shutdown handler into three different classes.
 - Change: Output -> File will now save the logfile directly after
   the analysis.
 - Change: Renamed the Output -> Frontend configuration to
   Output -> shutdown.
+
 
 2.1.1
 - Added the info, if a property / method is inherited.
